work on exporting all generated URLs into Excel sheet.
